chore - various clean-up for release